force-app/main/default/objects/JBCXM__SponsorTracking__c/JBCXM__SponsorTracking__c.object-meta.xml
<CustomObject>
    <description>This will be the junction object between SFDC and NewStack for transferring data related to contacts.</description>
    <label>SponsorTracking</label>
    <nameField>
        <label>Sponsor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SponsorTracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>