force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__ChangedInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ChangedInfo__c</fullName>
    <label>ChangedInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>