force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__IsChanged__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChanged</label>
    <type>Checkbox</type>
</CustomField>