force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__LastChangeDetails__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastChangeDetails__c</fullName>
    <label>LastChangeDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>