force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__LastChangeModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastChangeModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastChangeModifiedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SponsorTracking</relationshipName>
    <type>Lookup</type>
</CustomField>