force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__LastChangeModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastChangeModifiedDate__c</fullName>
    <label>LastChangeModifiedDate</label>
    <type>Date</type>
</CustomField>