force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__LinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LinkedInUrl__c</fullName>
    <label>LinkedInUrl</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>