force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__PhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PhotoUrl__c</fullName>
    <label>PhotoUrl</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>