force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__RelationshipContact__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationshipContact</label>
    <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
    <relationshipLabel>SponsorTracking</relationshipLabel>
    <relationshipName>SponsorTracking</relationshipName>
    <type>Lookup</type>
</CustomField>