force-app/main/default/objects/JBCXM__SponsorTracking__c/fields/JBCXM__SponsorFullName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SponsorFullName__c</fullName>
    <label>SponsorFullName</label>
    <length>155</length>
    <type>Text</type>
</CustomField>